finalizando a página contato

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -445,5 +445,36 @@
 }
 
 .formulario {
-    border: 1px solid red;
+    background-color: rgba(95, 158, 160, 0.404);
+    border: 1.5px solid rgba(104, 104, 104, 0.541);
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.formulario input,
+.formulario textarea {
+    cursor: pointer;
+}
+
+.formulario:hover {
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.264);
+}
+
+.formulario .submit:hover {
+    background-color: var(--white);
+    border: 1px solid var(--white);
+    color: var(--primary);
+    border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+    border-right: 2px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+.cta-contato {
+    padding: 150px;
+    background: linear-gradient(to right, rgba(48, 48, 48, 0.591) .1%, rgba(0, 0, 0, 0.829)), url(../img/jpg/contato-decrição.jpg);
+    background-position: center;
+    background-size: contain;
+    overflow: hidden;
+    border-top: none;
+    border-bottom: none;
 }
