--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -137,6 +137,9 @@
     .cta-contato h2 cite {
         font-size: 22px;
     }
+    .h5 {
+        width: max-content;
+    }
 }
 
 @media (max-width: 575.98px) {
@@ -154,10 +157,9 @@
         padding-left: 17px;
     }
     .bg-primary {
-        margin-top: 20px;
+        margin-top: -97px;
         font-size: 25px;
         width: 100%;
-        margin-left: 2%;
         background-color: rgb(0, 21, 88)!important;
         border-radius: 50px;
     }
@@ -225,5 +227,8 @@
 @media (max-width: 330px) {
     .h1-top {
         font-size: 2.3rem;
+    }
+    .span-email {
+        font-size: 17px;
     }
 }
