--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -140,6 +140,9 @@
     .h5 {
         width: max-content;
     }
+    .inicial-politica {
+        height: 300px;
+    }
 }
 
 @media (max-width: 575.98px) {
@@ -221,6 +224,9 @@
 @media (max-width: 378px) {
     .h1-top {
         font-size: 2.3rem;
+    }
+    .span-email {
+        font-size: 17px;
     }
 }
 
