--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -226,15 +226,13 @@
         font-size: 2.3rem;
     }
     .span-email {
-        font-size: 17px;
+        width: 100%;
+        border: 1px solid red;
     }
 }
 
 @media (max-width: 330px) {
     .h1-top {
         font-size: 2.3rem;
-    }
-    .span-email {
-        font-size: 17px;
     }
 }
