--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -235,4 +235,8 @@
     .h1-top {
         font-size: 2.3rem;
     }
+    .span-email {
+        width: 100%;
+        border: 1px solid rgb(0, 42, 255);
+    }
 }
