--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -219,6 +219,10 @@
     .h1-top {
         font-size: 1.9rem;
     }
+    .span-email {
+        width: 100%;
+        border: 1px solid rgb(255, 208, 0);
+    }
 }
 
 @media (max-width: 378px) {
