--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -221,7 +221,8 @@
     }
     .span-email {
         width: fit-content;
-        border: 1px solid rgb(255, 208, 0);
+        font-size: 16px;
+        border: 1px solid rgb(0, 255, 217);
     }
 }
 
