--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -222,7 +222,7 @@
     .span-email {
         width: fit-content;
         font-size: 16px;
-        border: 1px solid rgb(0, 255, 217);
+        border: 1px solid rgb(255, 128, 0);
     }
 }
 
@@ -231,7 +231,7 @@
         font-size: 2.3rem;
     }
     .span-email {
-        width: 100%;
+        width: fit-content;
         border: 1px solid red;
     }
 }
@@ -241,7 +241,7 @@
         font-size: 2.3rem;
     }
     .span-email {
-        width: 100%;
+        width: fit-content;
         border: 1px solid rgb(0, 42, 255);
     }
 }
