--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -198,6 +198,16 @@
     .service.sobre-cards {
         height: 480px;
     }
+    #section-contato .span-fone {
+        width: min-content;
+        font-size: medium;
+        border: 1px solid red;
+    }
+    #section-contato .span-email {
+        width: min-content;
+        font-size: medium;
+        border: 1px solid red;
+    }
     .footer .container-p-sobre .w-75 {
         width: 100%!important;
     }
@@ -219,29 +229,16 @@
     .h1-top {
         font-size: 1.9rem;
     }
-    .span-email {
-        width: fit-content;
-        font-size: 16px;
-        border: 1px solid rgb(255, 128, 0);
-    }
 }
 
 @media (max-width: 378px) {
     .h1-top {
         font-size: 2.3rem;
     }
-    .span-email {
-        width: fit-content;
-        border: 1px solid red;
-    }
 }
 
 @media (max-width: 330px) {
     .h1-top {
         font-size: 2.3rem;
-    }
-    .span-email {
-        width: fit-content;
-        border: 1px solid rgb(0, 42, 255);
     }
 }
