--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -201,12 +201,12 @@
     #section-contato .span-fone {
         width: min-content;
         font-size: medium;
-        border: 1px solid red;
+        border: 1px solid rgb(0, 127, 74);
     }
     #section-contato .span-email {
         width: min-content;
         font-size: medium;
-        border: 1px solid red;
+        border: 1px solid rgb(10, 120, 0);
     }
     .footer .container-p-sobre .w-75 {
         width: 100%!important;
