--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -200,12 +200,12 @@
     }
     #section-contato .span-fone {
         width: min-content;
-        font-size: medium;
+        font-size: small;
         border: 1px solid rgb(0, 127, 74);
     }
     #section-contato .span-email {
         width: min-content;
-        font-size: medium;
+        font-size: small;
         border: 1px solid rgb(10, 120, 0);
     }
     .footer .container-p-sobre .w-75 {
