--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -207,6 +207,7 @@
     .links-contato span {
         font-size: 16px;
         color: var(--primary);
+        border: 1px solid rgb(255, 0, 204);
     }
     .footer .container-p-sobre .w-75 {
         width: 100%!important;
@@ -229,16 +230,40 @@
     .h1-top {
         font-size: 1.9rem;
     }
+    .links-contato>i {
+        font-size: 19px;
+    }
+    .links-contato span {
+        font-size: 16px;
+        color: var(--primary);
+        border: 1px solid rgb(0, 19, 187);
+    }
 }
 
 @media (max-width: 378px) {
     .h1-top {
         font-size: 2.3rem;
     }
+    .links-contato>i {
+        font-size: 19px;
+    }
+    .links-contato span {
+        font-size: 15px;
+        color: var(--primary);
+        border: 1px solid rgb(0, 123, 37);
+    }
 }
 
 @media (max-width: 330px) {
     .h1-top {
         font-size: 2.3rem;
+    }
+    .links-contato>i {
+        font-size: 19px;
+    }
+    .links-contato span {
+        font-size: 14px;
+        color: var(--primary);
+        border: 1px solid red;
     }
 }
