finalizando customização dos links contato

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -463,6 +463,11 @@
         font-size: 18px;
     }
     
+    .links-contato {
+        display: flex;
+        align-items: center;
+    }
+    
     .links-contato>i {
         font-size: 25px;
         color: green;
