--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -234,6 +234,7 @@
     .links-contato span {
         font-size: 16px;
         color: var(--primary);
+        border: 1px solid burlywood;
     }
 }
 
